# CC-Hexed

./: .copier-answers.yml  .gitignore  .gitmodules  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: build.yml  release.yml
buildSrc/src/main/kotlin/cc_hexed/: java.gradle.kts  minecraft.gradle.kts  mod-publish.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/cc_hexed/utils/: mod-dependencies.gradle.kts
common/: build.gradle.kts
common/src/main/java/io/github/techtastic/cc_hexed/mixin/: CCHexedMixinConfigPlugin.java  MixinDatagenMain.java
common/src/main/kotlin/io/github/techtastic/cc_hexed/: CCHexed.kt  CCHexedAbstractions.kt  CCHexedClient.kt
common/src/main/kotlin/io/github/techtastic/cc_hexed/casting/environment/: AbstractComputerCastEnv.kt  AbstractComputerMishapEnv.kt  PocketComputerCastEnv.kt  TurtleCastEnv.kt
common/src/main/kotlin/io/github/techtastic/cc_hexed/config/: CCHexedClientConfig.kt  CCHexedServerConfig.kt
common/src/main/kotlin/io/github/techtastic/cc_hexed/datagen/: CCHexedActionTags.kt  CCHexedPocketUpgradeProvider.kt  CCHexedTurtleUpgradeProvider.kt
common/src/main/kotlin/io/github/techtastic/cc_hexed/interop/: CCAndroidsInterop.kt  MoreIotasInterop.kt  PhLibInterop.kt  PlethoraInterop.kt
common/src/main/kotlin/io/github/techtastic/cc_hexed/items/: VirtualPigment.kt
common/src/main/kotlin/io/github/techtastic/cc_hexed/networking/: CCHexedNetworking.kt
common/src/main/kotlin/io/github/techtastic/cc_hexed/registry/: CCHexedActions.kt  CCHexedItems.kt  CCHexedPocketUpgrades.kt  CCHexedRegistrar.kt  CCHexedTurtleUpgrades.kt
common/src/main/kotlin/io/github/techtastic/cc_hexed/util/: ConversionUtil.kt
common/src/main/resources/: architectury.common.json  cc_hexed-common.mixins.json
common/src/main/resources/assets/cc_hexed/lang/: en_us.flatten.json5
common/src/main/resources/data/computercraft/lua/rom/autorun/: cc_hexed_wrapper.lua
doc/: README.md  hexdoc.toml
doc/resources/assets/cc_hexed/lang/: en_us.flatten.json5
doc/src/hexdoc_cc_hexed/: _hooks.py
fabric/: build.gradle.kts
fabric/src/main/kotlin/io/github/techtastic/cc_hexed/fabric/: CCHexedAbstractionsImpl.kt  FabricCCHexed.kt  FabricCCHexedClient.kt  FabricCCHexedModMenu.kt  FabricCCHexedServer.kt
fabric/src/main/resources/: cc_hexed-fabric.mixins.json  fabric.mod.json
forge/: build.gradle.kts
forge/src/main/kotlin/io/github/techtastic/cc_hexed/forge/: CCHexedAbstractionsImpl.kt  ForgeCCHexed.kt  ForgeCCHexedClient.kt  ForgeCCHexedServer.kt
forge/src/main/resources/: cc_hexed-forge.mixins.json  pack.mcmeta
gradle/: libs.versions.toml
(+14 files in other folders)
