[build-system]
requires = [
    "hatchling",
    "hatch-gradle-version>=0.9.8",
]
build-backend = "hatchling.build"

# project metadata

[project]
name = "hexdoc-cc_hexed"
description = "Hexcasting x CC: Tweaked Interop"
readme = "doc/README.md"
authors = [
    { name="TechTastic" },
]
keywords = ["hexdoc"]
requires-python = ">=3.12"
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://techtastic.github.io/CC-Hexed"
Source = "https://github.com/TechTastic/CC-Hexed"

# project version

[tool.hatch.version]
scheme = "gradle"
source = "gradle-properties"
py-path = "doc/src/hexdoc_cc_hexed/__version__.py"
key = "modVersion"

# Python dependencies

# required
[tool.hatch.metadata.hooks.version-catalog]
dependencies = [
    { package="hexdoc-hexcasting", op="~=", py-version="1.0", key="hexcasting" },
]

# dev-only
[dependency-groups]
dev = [
    "ruff",
]

# directory inclusion

[tool.hatch.build]
only-include = [
    "doc/src/hexdoc_cc_hexed",
    "gradle.properties", ]
artifacts = [
    "/doc/src/hexdoc_cc_hexed/_export/generated",
    "/doc/src/hexdoc_cc_hexed/__gradle_version__.py",
]

[tool.hatch.build.targets.wheel]
sources = ["doc/src"]

# hexdoc entry point

[project.entry-points.hexdoc]
cc_hexed = "hexdoc_cc_hexed._hooks:CCHexedPlugin"

# linting

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"

include = ["doc/src"]
extraPaths = ["doc/src"]

typeCheckingMode = "standard"

strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportConstantRedefinition = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStubStatement = "error"

reportDeprecated = "warning"
reportDuplicateImport = "warning"
reportMatchNotExhaustive = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportMissingTypeStubs = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUntypedBaseClass = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedNamedTuple = "warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
